test_suite/tests/errors/duplicate_state_name.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            done? { return; }

        @foo
            done? { return; }
    }
}
